Russification of links
